workloads/medium-place/searxng/searxng/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: searxng
  namespace: medium-place
  labels:
    app.kubernetes.io/name: searxng
    app.kubernetes.io/part-of: searxng
    app.kubernetes.io/version: 2022.08.10

spec:
  replicas: 1
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app.kubernetes.io/name: searxng
      app.kubernetes.io/part-of: searxng

  template:
    metadata:
      annotations:
        diun.enable: "true"
        diun.regopt: docker.io
        diun.watch_repo: "true"
        diun.include_tags: "^\\d+\\.\\d+\\.\\d+-.+"
        diun.sort_tags: "semver"
      labels:
        app.kubernetes.io/name: searxng
        app.kubernetes.io/part-of: searxng
        app.kubernetes.io/version: 2022.08.10

    spec:
      terminationGracePeriodSeconds: 60

      volumes:
        - name: searxng-config
          secret:
            secretName: searxng-config

      containers:
        - name: searxng
          image: searxng/searxng:2022.08.10-2bfb269f

          volumeMounts:
            - name: searxng-config
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml

          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
