workloads/medium-place/searxng/searxng/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: searxng
  namespace: medium-place
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/target: nutria.cschmatzler.github.beta.tailscale.net
  labels:
    app.kubernetes.io/part-of: searxng

spec:
  ingressClassName: nginx-private

  tls:
    - hosts:
        - helpdesk.medium.place
      secretName: helpdesk.medium.place-tls

  rules:
    - host: helpdesk.medium.place
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: searxng
                port:
                  name: http
